5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1760_1183.log
== TEST (2019-05-28 23:54:20) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)
i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
		else:
			i = i + 1
			vetor2 = arange((cont))
			j = 0
			i = 0
			tam = size(vetor2)
			while(tam > i):
				if(vetor[j] > 0):
					con = vetor[j]
					vetor2[i] = con
					i = i + 1
					j = j + 1
				else:
					j = j + 1
					
print(vetor2)

-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:55:07) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)
i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
			while(tam > i):
				if(vetor[j] > 0):
					con = vetor[j]
					vetor2[i] = con
					i = i + 1
					j = j + 1
				else:
					j = j + 1
					
print(vetor2)

-- ERROR:
File "XXXX", line 17
    while(tam > i):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:55:50) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)
i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
		while(tam > i):
			if(vetor[j] > 0):
				con = vetor[j]
				vetor2[i] = con
				i = i + 1
				j = j + 1
			else:
				j = j + 1
					
print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:56:56) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)
i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
		while(tam > i):
			if(vetor[j] > 0):
				con = vetor[j]
				vetor2[i] = con
				i = i + 1
				j = j + 1
			else:
				j = j + 1
print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:13:31) 
-- CODE:
from numpy import *

vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)

i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
		while(tam > i):
			if(vetor[j] > 0):
				con = vetor[j]
				vetor2[i] = con
				i = i + 1
				j = j + 1
			else:
				j = j + 1
print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:24:10) 
-- CODE:
from numpy import *

vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)

i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
		while(tam > i):
			if(vetor[j] > 0):
				con = vetor[j]
				vetor2[i] = con
				i = i + 1
				j = j + 1
			else:
				j = j + 1

print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:25:29) 
-- CODE:
from numpy import *

vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)

i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
		vetor2 = arange((cont))
		j = 0
		i = 0
		tam = size(vetor2)
while(tam > i):
	if(vetor[j] > 0):
		con = vetor[j]
		vetor2[i] = con
		i = i + 1
		j = j + 1
	else:
		j = j + 1

print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:27:45) 
-- CODE:
from numpy import *

vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)

i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
vetor2 = arange((cont))
j = 0
i = 0
tam = size(vetor2)
while(tam > i):
	if(vetor[j] > 0):
		con = vetor[j]
		vetor2[i] = con
		i = i + 1
		j = j + 1
	else:
		j = j + 1

print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:28:05) 
-- CODE:
from numpy import *

vetor = array(eval(input("digite vetor: ")))
tamvet = size(vetor)

i = 0
cont = 0

while(tamvet > i):
	if(vetor[i] > 0):
		cont = cont + 1
		i = i + 1
	else:
		i = i + 1
vetor2 = arange((cont))
j = 0
i = 0
tam = size(vetor2)
while(tam > i):
	if(vetor[j] > 0):
		con = vetor[j]
		vetor2[i] = con
		i = i + 1
		j = j + 1
	else:
		j = j + 1

print(vetor2)

-- EXECUTION TIME:
0.460438
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
